# sthlm-music

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  CRAWLERS.md  DEPLOY-CHECKLIST.md  DEPLOYMENT.md  Makefile  PRE-COMMIT-SETUP.md  README.md  SETUP.md  check-events.js  check-kollektivet.js  check-venues.js  cleanup-db.js  clear-db.js  consolidate-kollektivet.js  consolidate-stadsgarden.js  crawl-all.js  crawl-banan-kompaniet.js  crawl-berns.js  crawl-billetto.js  crawl-bk.js  crawl-broder-tuck.js  crawl-cirkus.js  crawl-debaser-fixed.js  crawl-debaser.js  crawl-fallan.js  crawl-fasching.js  crawl-fredagsmangel.js  crawl-fylkingen-fixed.js  crawl-fylkingen.js  crawl-gamla-enskede-bryggeri.js  crawl-geronimosfgt.js  crawl-gotalejon.js  crawl-gronalund.js  crawl-konserthuset.js  crawl-landet-billetto.js  crawl-nalen.js  (+26 more)
.claude/: package.json  settings.json  setup-git-permissions.sh
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
backend/: .dockerignore  .env.example  .gitlab-ci.yml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
client/: .env.example  Caddyfile  Dockerfile  package-lock.json  package.json  railway.json  server.js  vite.config.ts
docs/: task-dag.json
frontend/: .env.example  .gitignore  .npmrc  CLAUDE.md  Makefile  README.md  api.js  eslint.config.mts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.mts
src/: genre-inference.ts  index.ts  main.py  non-concert-pruning.ts  server.ts
tests/: test_main.py
tmp/: .gitkeep
(+180 files in other folders)
